[package]
name = "countries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.20", features = ["full"] }
reqwest = { version = "0.11.11", features = ["blocking"] }
tokio = { version = "1.20.1", features = ["full"] }
futures = "0.3"
hyper-tls = "0.5.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
